# MyBlog

./: .gitignore  LICENSE  README.en.md  README.md
back/: webproject.sql
back/admin/: urls.py  views.py
back/all_database/: apps.py  models.py
back/article/: comment_views.py  like_views.py  urls.py  views.py
back/blog_back/: ENV_SETUP.md  asgi.py  set_dev.py  set_prod.py  settings.py  urls.py  wsgi.py
back/cinema/: access_token.py  apps.py  rtc_config.py  urls.py  views.py
back/cinema/rtc_build/: CMakeLists.txt
back/cinema/rtc_build/cmake/: FindFFmpeg.cmake
back/cinema/rtc_build/src/: app_data_manager.cc  app_data_manager.h  bytedance_get_token.cc  bytedance_get_token.h  main.cc  mp4_audio_src.cc  mp4_audio_src.h  rtc_engine_wrapper.cc  rtc_engine_wrapper.h  video_file_src.cc  video_file_src.h
back/cinema/rtc_build/src/util/: thread_loop.h  util.cc  util.h
back/cinema/scripts/: deploy_rtc_runtime.sh
back/common/: article_content_sanitize.py  auth_views.py  captcha_utils.py  captcha_views.py  config_utils.py  jwt_middleware.py  jwt_utils.py  middleware.py  models.py  user_relation_utils.py  views.py
back/config/: config_back.json
back/depend_manage/: database_manage.txt  export_database.bat  export_database_full.bat  export_database_safe.bat  import_database.bat  init_admin_user.py  requirements.txt  uwsgi.ini  uwsgi命令.txt  webproject.sql
back/feedback/: urls.py  views.py
back/forgot/: views.py
back/games/: urls.py  views.py
back/history/: urls.py  views.py
back/home/: models.py  views.py
back/login/: views.py
back/network_disk/: apps.py  urls.py  views.py
back/network_disk/management/commands/: README.md  cleanup_old_files.py
back/prod_manage/: requirements.txt  uwsgi.ini
back/register/: views.py
front/blog_front/: .env.development  .env.production  README.md  build.sh  components.d.ts  index.html  package-lock.json  package.json  vite.config.js
front/blog_front/public/: config.json  config_front.json
front/blog_front/scripts/: patch-vertc.mjs  strip-console-lines.mjs  strip-console.mjs
front/blog_front/src/: App.vue  main.js  style.css
front/blog_front/src/assets/: element-plus-override.css  highlight.css  layout.css  main.css
front/blog_front/src/components/: CaptchaDialog.vue  CommentList.vue  CreateButton.vue  FeedbackButton.vue  Footer.vue  Head.vue  Logout.vue  UserInfoSidebar.vue  article_main.vue  cinema_main.vue  feedback_main.vue  games_main.vue  history_main.vue  home_main.vue  movie_main.vue  theme.vue  (+6 more)
(+57 files in other folders)
